# mimiclaw

./: .gitignore  README.md  README_CN.md  sdkconfig.defaults.esp32s3
.github/workflows/: release.yml  webflasher.yml
docs/: index.html  manifest-v1.2.json  manifest-v1.3.json  manifest-v1.json  manifest.json  webflasher.html
main/: CMakeLists.txt  Kconfig.projbuild  mimi.c  mimi_config.h
main/agent/: agent_loop.c  context_builder.c
main/cli/: serial_cli.c
main/display/: display_hal.c  display_hal.h  display_ui.c  display_ui.h  lobster_sprite.h
main/hardware/: body_animator.c  body_animator.h  servo_driver.c  servo_driver.h  sonar_radar.c  sonar_radar.h  ultrasonic.c  ultrasonic.h
main/input/: button_handler.c  button_handler.h  gesture_detect.c  gesture_detect.h
main/llm/: llm_proxy.c  llm_proxy.h
main/ota/: ota_manager.c  ota_manager.h
main/portal/: captive_portal.c  captive_portal.h
main/power/: battery_monitor.c  battery_monitor.h  sleep_manager.c  sleep_manager.h
main/telegram/: telegram_bot.c
main/tools/: tool_ota.c  tool_ota.h  tool_perception.c  tool_perception.h  tool_registry.c  tool_servo.c  tool_servo.h
main/wifi/: wifi_manager.c  wifi_manager.h
